fix messages table layout on mobile (#611)
layout on mobile was broken for "hide translated" checkbox.

--- a/assets/less/messages.less
+++ b/assets/less/messages.less
@@ -69,6 +69,7 @@
             margin-bottom: 0;
             margin-right: 10px;
             font-size: 12px;
+            white-space: normal;
 
             &:before {
                 top: 2px;
@@ -76,5 +77,4 @@
             }
         }
     }
-
 }
